# HNU_RM_SHARK_A

./: .config  CMakeLists.txt  project.ewp  rtconfig.h
applications/: main.c
board/: Kconfig
board/CubeMX_Config/: .cproject  .mxproject  CubeMX_Config.ioc
board/CubeMX_Config/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
board/CubeMX_Config/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
libraries/HAL_Drivers/: drv_can.c  drv_spi.c  drv_usart.c
rt-thread/components/drivers/include/drivers/: spi.h
src/: rm_config.h
src/algorithm/: rm_algorithm.h
src/algorithm/kalman_filter/: kalman_filter.h
src/algorithm/user_lib/: user_lib.h
src/modules/: SConscript  rm_module.h
src/modules/imu/: imu.h
src/modules/imu/A6500/: A6500.c  A6500.h
src/modules/imu/ADS16467/: adis16467.c  adis16467.h
src/modules/mag/ist8310/: ist8310.c
src/modules/rc/dbus/: rc_dbus.c
src/modules/rc/sbus/: rc_sbus.c
src/modules/referee/bsp_referee_UI/: Referee_system.c
src/task/: rm_task.h  robot.c
src/task/chassis/: chassis_task.c
src/task/cmd/: cmd_task.c
src/task/example/: example_task.c
src/task/ins/: ins_task.c  ins_task.h
src/task/motor/: motor_task.c
src/task/referee/: referee_task.h
src/task/shoot/: shoot_task.c  shoot_task.h
src/task/transmission/: transmission_task.c
